--- a/MedicalLink/ChucNang/ThongTinThucHienCLS/ucThongTinThucHienCanLamSang.resx
+++ b/MedicalLink/ChucNang/ThongTinThucHienCLS/ucThongTinThucHienCanLamSang.resx
@@ -118,59 +118,69 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnNVThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnTimKiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAJSSURBVEhLrZU/SJVRGMYvIREhDiIh4SAiDQ7iEE0hISIi4uDU4OAUjU0OIiI4NEU0iYNDk4iI
-        iDSEiIiIU4iIQ0RERDiIg4iIhOf0e8499/Pcc7/PKwcvPJw/9/1/nvf9SqWC30zJNs6UzFvWLfCH/SHr
-        POgCRWp3u8dAE9gE18BGOOU8cjdLOVKKjmg/gMBwuHcO/4K2JCcoPsH4yY0DGa84CPd2ItGBeZlTlrhM
-        Oq8lOrCjtzvIstlJdTBULkleWSr3bt1KdSAa5rEnLtNCogMDRc2PYhZljBpPdOBo+rEOi47JsjXJgZRQ
-        bgfnxY9t3t9HN7+7eYuqpvvGfXNy9BVFjDRQpqNaRtnRQKYbuVlk1sEX9p/AK/CgbgAoNCP4K6dMvdw9
-        5P+pgjJecf+5MEv+eAzGMaBSxNTc5x7jdpIVKme9okf/HZV0RYFkmSAsw9TdMMhyG0298Rr0gItIZoS7
-        TnAW3Et+TIwRpLRXzBqXicb0UwyIQXFmgYOq/zZl/DlQisF4qDEggz/1eECPqTMfITvgwQRWaU0/K6PG
-        bnuZUznwta47f75jQPJffTB0u231eMQK69yZLO2qd3AmhVsaqioTsnTMmvPK/1j5bjgMgg4g1qmUYpKy
-        3JeDgIo1X66w1hg0fd6YjIcTN3qDzM6UHEgJJ/VK5CKioVwpFiP5Dc7LgMizkX6AXLnj2egzCfftEqDW
-        Lm2V7rKcrlH0ilrnYfYt3lnBWDcYN1253cwfGhFixTNW0Vcse+GhfbsPSg/7BuwC+K+ANFrsdBY5gv8B
-        /tdUnAkS8hsAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAg9JREFUSEut
+        lbFLQlEUxh8hEdEgIg7iEBEN/QENDRER0tQQ0RDSLA4NEdEUSjRHNEdDREM0NTRFRERERERESDRFRERE
+        Q0RE7/U7z/P0Kep9msLHvU+/c75zvnfv0bJ8n6zltIFBsA6uspb9CB7AAc+zIObnN7QnOAw2wRdwakAE
+        J6SQZpIfEewlviNJjucZ1gzrNutnQdSWAtKBBdQWEkhyN3gBtFcm4LtecKo8ERsKJAJx2GfLfL32+S0K
+        pDvp9CSQVeq7VH/NPmSqCs44+FE7+018C+K9ertoJEOA2wHkZEkXGWMMpHdtedJIVgL8My1q2RgD8VUF
+        po3kooB9rjE5YwyteuQ1I7lgUQy8qEUpYwzkFa1GgqKmALhz4Bd8w4+b+FKRnG/vPeyx76wVxG8DJP1Q
+        /7eMyT2CnAYCqcq9bMeFRKVxwD4CmEWS3D09VO+MNCIQIlBGA+fbvURyU2/APjgEz2qLl1xWOaop1lHW
+        ml0Xi4Aod2KKNa8ilQNPxHfAGHhSm4QjnUsR4UAdQaQbGR/2EquM7VX2WOj0+CxNq51ahGvtBRzzSw9S
+        BYmS1bu0uYB2IkiOuhySdCHA/SmOd+nAs1Q6ibRAxImTSCera1Hr7SJpHyK3NQ6FjPPm/2J9L1wuKp1U
+        tWvj31ZJAgQSCGgnZXa9tURARboRuSy3y863TKDUibOrI4Wb7iT/AGcZ7VCFlQM4AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnThemTuExcel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAKrSURBVEhLrZW9a1VBEMUfQUIQCSlExCKFRQghhYillVhIkCApLMQqpYWVf0AsxEKCVbAQCxGx
-        sBArSWEhIhYpLUQkBAkiIhKChYU46+/MnblZb/J8T+OFw8zs19mdPTu3t9Qr40s9u4V9BzbBx8AnbBfZ
-        V1vNqfGY9Y718qPzNvgJyn/Ec0jGnINFP+wsbBVJP3+YjdgPCCaTYIvgO3jVoIT9Z/8r62ijU0mwTbAB
-        DoCR4WDVuF3+08jIdBJ8C4L2XvbjsPsncYKZIDAITCfYz7q1aLoEJU8wEpd+AsIbEJ6J+FLEN2mjXX3W
-        8W2uUiUEEoLNdu8gCIwFXSnXg0C6HqAuW/6dwMfXBJ6iJDiKP5cqwJ4C8wPQ5LuRfaao3wlcSQfBaEwY
-        bWJTW1j5iTImBf5Niti9vWHSlSDgpXsckN/GD/F12vGKQHf2lrZUUdFDI0WWKbqA/5kB14LgXsS0ebuw
-        DhZ30upvaCJPIpt9yhkEemhJUJSSw0pHEFAMyxH6QWu1mOZO034H+x5QGA3r8XH116WiPoGq66wWC4JJ
-        fMUJzzfxOUBZyNpUK82r8NkOQaqoXG5kaXvJdC12PkO/UpvyVbl+ASjjPlf4QjyVKVJFzZ2dxn8EFmKn
-        V/G5zPIAzDdtxr3UVdWWlXOw0mlf2UXQvvk+DgsgS8sSL8uilpu5GLF+SDrdughUXtsTDEEgAUhRSsPq
-        XuNpfxkE2yJQrpS7Q4MWj5TpYcUJXN763Z6P1EniSleeYEMEz4B+mbok5f4PsLgDv4+4TE+F16KQaNVu
-        d0Ugzb6mE5JURSohF2nbpSJdpiRbqchPsgpQUztXDzL/al5XeDSFUl1OAgqcqciFTd/7RKCNLTBGf8Oq
-        0rZvQmlXgRwm6/3HNBuy+1i9Yv1XlHvF2qxP/AVJ8ZpRvGpL+QAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnNVOK.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAIlSURBVEhLnVY9S8RAFAwiYiFWYnEch4hY+Av8AVaHiJWFWIpYWIiFWJ6llYWIWFhZiIhYWFj4
-        A8RCxMJCRETkEBEROSxEfHFms9l8bjbxYC6bbHbe7uy8t/E8y6/lidfy/GFgCTgFHoFP4F23z3BdBkYB
-        G032OV8G6sCuJvNxLQKD7uvJuAPhxSngGSuIkcbbtmDyinGzhatB5yKIvwPykLRKW34wbi0TRMsyiSvI
-        C+VwycV+BPHnEkFwUwOekrJYpdBBClcGuWTEbAjIt6vJEpLLL8YeA3fReBP4QK0Cfw3g7Z/SnGBcLzCA
-        ABcpDrprDAFkPp/c5iKz+ZxUnTLg2gOe64jHjF1l51HQUcktNMOMJu9Cez0rkeI7Z4Db6vIIE6tbBxhH
-        u2PhaDNAu5pEym01Td6HsZeRAqHzjEQdBkDW5kr0gucTAJOP3qY96ZpmaD8833DIqwJYJJIV9LGfQBD/
-        C9jjfUwaV2IqiQ5zdp8bdIPnoUvotmncD2ryfrSv7PXKSKQ2GTY1iZPKUhWkES+RwYpks6TrlE1diWZW
-        EsxeuC+Uy1GXJEg0veStrBMSBEyiIQDSyL1F0nR5D0qFDoBiJ7Fil5t0H3gHli5Vxnk2JIodpWoCLleU
-        Ldf5Bw9mt+AOUlijmC/ZAyfpEsHB45Qrp3b5PAOKj0ztkvDQ38Fs+AXhcgv3pvyhH5UB5Xc6h6UCdV9w
-        qPggU58uDwA+ZcT52fIH41hsfH7tSncAAAAASUVORK5CYII=
-</value>
-  </data>
-  <metadata name="openFileDialogSelect.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="imageListstatus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>15, 12</value>
   </metadata>
+  <data name="imageListstatus.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACA
+        CAAAAk1TRnQBSQFMAgEBAgEAARABAgEQAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0UAAf8BGgFZAjIBegEa
+        Af8IAAH/AcEBfAI8AeQBCAH/JwABGwgyARsGAAEbCDwB8yUAARsKMgEbBAAB8wo8AfMjAAH/AVMKMgFT
+        Af8CAAH/AVoKPAFaAf8iAAEaDDIBGgIAAQgMPAHBIgABWQwyAVkCAAF8DDwBfCIADjICAA48IgAOMgIA
+        DjwiAAFZDDIBWQIAAXwMPAF8IgABGgwyARoCAAEIDDwBwSIAAf8BUwoyAVMB/wIAAf8BWgo8AVoB/yMA
+        ARsKMgEbBAAB8wo8AfMlAAEbAVMGMgFTARsGAAHzAVoGPAFaAfMnAAH/ARoBWQIyAVkBGgH/CAAB/wHB
+        AXwCPAF8AQgB/2QAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAT/BAAB8AEP
+        AfABDwQAAeABBwHgAQcEAAHAAQMBwAEDBAABgAEBAYABAQQAAYABAQGAAQEEAAGAAQEBgAEBBAABgAEB
+        AYABAQQAAYABAQGAAQEEAAGAAQEBgAEBBAABgAEBAYABAQQAAYABAQGAAQEEAAHAAQMBwAEDBAAB4AEH
+        AeABBwQAAfABDwHwAQ8EAAT/BAAL
+</value>
+  </data>
   <metadata name="imMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>187, 25</value>
+    <value>114, 17</value>
   </metadata>
   <assembly alias="DevExpress.Utils.v15.2" name="DevExpress.Utils.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
   <data name="imMenu.ImageStream" type="DevExpress.Utils.ImageCollectionStreamer, DevExpress.Utils.v15.2" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -181,10 +191,17 @@
         a2VuPWIwM2Y1ZjdmMTFkNTBhM2EFAQAAAChEZXZFeHByZXNzLlV0aWxzLkltYWdlQ29sbGVjdGlvblN0
         cmVhbWVyAgAAAAlJbWFnZVNpemUERGF0YQQHE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAAgIAAAAF/P//
         /xNTeXN0ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAABAAAAAQAAAACQUAAAAP
-        BQAAAAAAAAACCw==
+        BQAAAM0BAAACyQEAAIlQTkcNChoKAAAADUlIRFIAAAAQAAAAEAgGAAAAH/P/YQAAAAFzUkdCAK7OHOkA
+        AAAEZ0FNQQAAsY8L/GEFAAABc0lEQVQ4T42TzyuEURSGvyRJspD8CbKQrDRJ06RJVhZWkiRZzcrKQha2
+        miytJUmW/gBpspAsNUmSJFlJkiRpvI/eU1+XqZl6Ouf+es97z9wv28gaM+JRvJsPxTwxn4/32lPM+Cl5
+        EltiQpSawFqeHY0vQuBNg/LvoMWf9i+Jm7wA6rPiToy72qViPYE5XCJwGwLcDYFl94CcvnyJ7wTmpsVi
+        KlBK3WsD/WlLiKILuM07wNaUOBEjoiBOmzCq+X8FVrTQsMU554yDZ+WHFqdYPXWA3T5bxz459JsOj4cV
+        u0VPCPBouALd3xODvsa+4oEoiy6v0VQc0fh1ilEJATq/6kX+AbrMRmxzeNdjXmxVhFAFAdSo0imGRLuh
+        mQOi1wceFLf9eo+Vv4hrBKgyL+jBn7doUdxUY5F9okZxkk3bi0fDY4FPceQr4JL1mh1wbUTPEQCsjwka
+        GRSVF3xgzQdeFXkfHEZwsqXPx0UqileCj+8sDv8A/CWy4CDG2LoAAAAASUVORK5CYIIL
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>59</value>
+    <value>54</value>
   </metadata>
 </root>
